--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "etax-helper:dev": "pnpm -r --filter=./packages/etax-helper dev",
+    "qixin-helper:dev": "pnpm -r --filter=./packages/qixin-helper dev",
     "showdoc-helper:dev": "pnpm -r --filter=./packages/showdoc-helper dev",
     "build": "pnpm -r --filter=./packages/* build"
   },
