--- a/packages/qixin-helper/package.json
+++ b/packages/qixin-helper/package.json
@@ -9,9 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
+    "element-plus": "^2.13.1",
+    "jquery": "^3.7.1",
     "vite-plugin-monkey": "^2.12.0"
   },
   "volta": {
     "extends": "../../package.json"
-    }
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^6.0.3"
+  }
 }
